crates/toml/tests/snapshots/invalid/control/linetab-number-03.stderr
TOML parse error at line 1, column 25
  |
1 | linetab-number-03 = 0xff
  |                         ^
invalid hexadecimal number
